--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
   <link rel="manifest" href="/manifest.webmanifest" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-title" content="베이스 지판 퀴즈" />
+  <meta name="apple-mobile-web-app-title" content="베이스 지판 외우기" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>베이스 지판 퀴즈</title>
+  <title>베이스 지판 외우기</title>
 </head>
 
 <body>
